<resources>
    <string name="app_name">Expense Tracker</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="dont_have_account">Don\'t have an account? Register</string>
    <string name="id_tz">ID (TZ)</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="birth_date">Birth Date</string>
    <string name="title">Title</string>
    <string name="amount">Amount</string>
    <string name="save">Save</string>
    <string name="capture_receipt">Capture Receipt</string>
    <string name="my_profile">My Profile</string>
    <string name="update_profile">Update Profile</string>
    <string name="logout">Logout</string>
    <string name="add_expense">Add Expense</string>
</resources>